Removed fixed padding for dietContainer and decreased spacing in mealCard contents

--- a/client/src/css/diet.module.css
+++ b/client/src/css/diet.module.css
@@ -1,5 +1,5 @@
 .dietContainer {
-  padding: 30px;
+  /* padding: 30px; */
 }
 
 .container-fluid {
